unifi/ingress.yaml
---
# replicated from chart, to use proper apiVersion
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: unifi
  annotations:
    cert-manager.io/cluster-issuer: le-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: unifi.home.seanho.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi-gui
            port:
              name: https-gui
  tls:
  - hosts:
    - unifi.home.seanho.com
    secretName: unifi-tls
